simplify cross-compilation

--- a/cmd/ubnt-discovery/Makefile
+++ b/cmd/ubnt-discovery/Makefile
@@ -4,8 +4,8 @@ NAME      = ubnt-dicovery
 TARGET    = ../../bin/$(NAME)
 DEPS      = $(shell find ../../discovery -type f -name '*.go')
 DEPS     += $(shell find . -type f -name '*.go')
-LDFLAGS	  = -s -w $(GOLDFLAGS)
 
 $(NAME): $(DEPS)
-	mkdir -p $(dir $TARGET)
-	go build -ldflags "$(LDFLAGS)" -o "$(TARGET)"
+	$(call goldbuild,$(TARGET),linux,amd64)
+	$(call goldbuild,$(TARGET),darwin,amd64)
+	$(call goldbuild,$(TARGET),windows,amd64)
